--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <tbody>
       <tr>
         <td id="tongkg"></td>
-        <td id="2so"></td>
-        <td id="kqc"></td>
-        <td id="kqt"></td>
-        <td id="kqn"></td>
-        <td id="kqch"></td>
+        <td id="tien"></td>
+        <td id="kqn" onkeyup="splitInDots(this)"></td>
+        <td id="gc"></td>
+        <td id="kq"></td>
+        <td id="veso"></td>
       </tr>
     </tbody>
   </table>
@@ -89,14 +89,14 @@
     <br>
     <h6 id="arr"></h6>
     <br>
-    <h6>Số lượng bao lúa đã nhập:</h6><button class="btn btn-dark" id="dem"></button>
+    <h6>Số lượng bao lúa đã nhập:</h6><div class="btn btn-dark" id="dem"></div>
   </div>
     <div class="col-sm-6">
   
      
     <div class="form-group">
         <label for="pwd">Số tiền bán ra:</label><label id="kt2" style="color: red; font-size: 20px"></label>
-        <input type="text" class="form-control" id="tien" placeholder="Nhập số tiền bán" required="Không bỏ trống" >
+        <input type="text" class="form-control" id="sotien" placeholder="Nhập số tiền bán" required="Không bỏ trống" >
       </div>
     <button class="btn btn-success" onclick="myFunction()" type="button">Tính Tiền</button>
     
