--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
     
     
     <button type="reset" class="btn btn-info">Tính lại</button>
-    <button class="btn btn-danger" onclick="addarr()" type="button">Nhập</button>
+    <button class="btn btn-primary" onclick="addarr()" type="button">Nhập</button>
     <br>
     <br>
     <h6 id="arr"></h6>
+    <br>
+    <button class="btn btn-danger" onclick="rearr()" type="button">Xóa</button>
     <br>
     <h6>Số lượng bao lúa đã nhập:</h6><div class="btn btn-dark" id="dem"></div>
   </div>
