--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <thead>
       <tr>
         <th>Tổng khối lượng lúa (Kg)</th>
-        <th>Số tiền bán ra</th>
+        <th>Số tiền bán 1kg lúa</th>
         <th>Số tiền thu được</th>
-        <th>Số giạ/công</th>
+        <th>Số giạ lúa</th>
         <th>Kết quả trúng mùa</th>
         <th>Vé số nên mua</th>
       </tr>
@@ -97,7 +97,7 @@
   
      
     <div class="form-group">
-        <label for="pwd">Số tiền bán ra:</label><label id="kt2" style="color: red; font-size: 20px"></label>
+        <label for="pwd">Số tiền bán 1 kg lúa:</label><label id="kt2" style="color: red; font-size: 20px"></label>
         <input type="text" class="form-control" id="sotien" placeholder="Nhập số tiền bán" required="Không bỏ trống" >
       </div>
     <button class="btn btn-success" onclick="myFunction()" type="button">Tính Tiền</button>
