--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     </tbody>
   </table>
  </div>
-				 
+ <h6 id="doctien"></h6>
+				<br> 
       <h2>Nhập khối lượng lúa</h2>
       
   <form>
